# smolprng

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: coverage_action.yml  rust.yml
benches/: bench_generators.rs
src/: algorithms.rs  distributions.rs  lib.rs  smol_core.rs
src/algorithms/: jsf.rs  lcg.rs  middle_square.rs  pcg.rs  scf32.rs  splitmix.rs  step_generators.rs  xoroshiro.rs  xorshift.rs  xoshiro.rs
src/distributions/: constant.rs  uniform.rs
