[package]
name = "smolprng"
version = "0.1.2"
edition = "2021"
authors = ["Dustin Kenefake"]
license = "BSD-3-Clause"
description = "A Small and Extensible PRNG written in Rust"
repository = "https://github.com/DKenefake/SmolPRNG/"
readme = "README.md"
homepage = "https://github.com/DKenefake/SmolPRNG/"

[dependencies]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 1
rpath = false


