[package]
name = "smolprng"
version = "0.1.6"
edition = "2021"
authors = ["Dustin Kenefake"]
license = "BSD-3-Clause"
description = "A Small and Extensible PRNG written in Rust"
repository = "https://github.com/DKenefake/SmolPRNG/"
readme = "README.md"
homepage = "https://github.com/DKenefake/SmolPRNG/"
keywords = ["PRNG"]
categories = ["pseudorandom number generation"]
[dependencies]

[features]
std = []
no_std = []

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false


